--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 .h1{
     text-align: center;
     color: rgb(22, 22, 151);
+    font-size:xx-large;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: oblique;
 }
